[gd_scene load_steps=8 format=3 uid="uid://b5cpfifmyll8p"]

[ext_resource type="Script" uid="uid://cj3dulk12gtoq" path="res://Scene/loading_screen.gd" id="1_2vpup"]
[ext_resource type="Texture2D" uid="uid://baog4h23xvvv" path="res://asset/(DEMO) Lords Of Pain - Old School Isometric Assets/baldurs-gate-ii-throne-of-bhaal-background-wallpaper-altar-of-gaming-355.webp" id="2_twr2k"]
[ext_resource type="Texture2D" uid="uid://dj4vqjrd3kv67" path="res://font/fontbolt (4)-Photoroom.png" id="3_jvqe4"]
[ext_resource type="Texture2D" uid="uid://batd5tdo8wblk" path="res://asset/Simple Fantasy GUI/PNG/Loading Bar/Progress_Bar.png" id="5_hpebb"]
[ext_resource type="Texture2D" uid="uid://dwdhepanpfw03" path="res://asset/Simple Fantasy GUI/PNG/Loading Bar/Background_Bar.png" id="5_trxa4"]
[ext_resource type="Texture2D" uid="uid://bknub58yglkgm" path="res://font/fontbolt (3)-Photoroom.png" id="7_gyih4"]
[ext_resource type="FontFile" uid="uid://dg0whh4ceykhf" path="res://Carlito-Regular.ttf" id="7_ief3t"]

[node name="LoadingScreen" type="CanvasLayer"]
script = ExtResource("1_2vpup")

[node name="PanelBG" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -5.0
offset_top = 1.0
offset_right = 635.0
offset_bottom = 382.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_twr2k")

[node name="Spinner" type="AnimatedSprite2D" parent="PanelBG"]
position = Vector2(0, 1.42857)

[node name="TipLabel" type="Label" parent="PanelBG"]
layout_mode = 0
offset_top = 1.42857
offset_right = 40.0
offset_bottom = 24.4286

[node name="TextureRect2" type="TextureRect" parent="PanelBG"]
layout_mode = 0
offset_left = 1341.43
offset_top = 387.143
offset_right = 1442.43
offset_bottom = 462.143
scale = Vector2(2, 2)
texture = ExtResource("3_jvqe4")

[node name="TextureRect3" type="TextureRect" parent="PanelBG"]
layout_mode = 0
offset_left = 402.857
offset_top = 858.572
offset_right = 947.857
offset_bottom = 924.572
scale = Vector2(2, 1)
texture = ExtResource("5_trxa4")

[node name="TextureProgressBar" type="TextureProgressBar" parent="PanelBG/TextureRect3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -245.5
offset_top = -12.5
offset_right = 245.5
offset_bottom = 12.5
grow_horizontal = 2
grow_vertical = 2
texture_progress = ExtResource("5_hpebb")

[node name="Label" type="Label" parent="PanelBG"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -540.0
offset_top = 240.929
offset_right = -500.0
offset_bottom = 263.929
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
theme_override_colors/font_color = Color(0.776471, 0.686275, 0.168627, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_ief3t")
text = "Tip:"

[node name="Label2" type="Label" parent="PanelBG"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -494.286
offset_top = 226.643
offset_right = -454.286
offset_bottom = 249.643
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
theme_override_colors/font_color = Color(0.776471, 0.686275, 0.168627, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_ief3t")
text = "Tip:"

[node name="Label3" type="Label" parent="PanelBG/Label2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.8572
offset_top = -10.3572
offset_right = 982.143
offset_bottom = 24.6428
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_ief3t")
text = "        Struggling with a tough foe? Remember, just keep your Health above 0
 while lowering your enemy's Health to 0. Works every time!"

[node name="TextureRect" type="TextureRect" parent="PanelBG"]
layout_mode = 0
offset_left = 235.714
offset_top = 408.571
offset_right = 1092.71
offset_bottom = 498.571
scale = Vector2(1.3, 1.3)
texture = ExtResource("7_gyih4")
